# aizenx

./: .gitignore  AizenX_Demo.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
aizenx/: cli.py
aizenx/analysis/: model_summary.py
aizenx/dashboard/: app.py
aizenx/explainers/: counterfactual.py  dice_counterfactual.py  lime_explainer.py  local_explainer.py  shap_interactions.py
aizenx/fairness/: __init__.py
aizenx/models/: sklearn_adapter.py
aizenx/visualization/: correlation_heatmap.py  counterfactual_plot.py  graph_plot.py  partial_dependence.py  plots.py  shap_summary.py  shap_waterfall.py  waterfall_plot.py
aizenx_backup/: __init__.py
aizenx_backup/analysis/: explanation_stability.py  feature_interactions.py
aizenx_backup/api/: server.py
aizenx_backup/benchmark/: explainer_benchmark.py
aizenx_backup/causal/: causal_explainer.py
aizenx_backup/core/: explainer.py
aizenx_backup/data/: dataset_profiler.py
aizenx_backup/debugging/: data_leakage_detector.py
aizenx_backup/explainers/: __init__.py  global_explainer.py  graph_explainer.py  integrated_gradients.py  kernel_shap.py  permutation_importance.py  shap_explainer.py  shap_like.py
aizenx_backup/fairness/: bias_detector.py  fairness_metrics.py
aizenx_backup/reports/: report_generator.py
aizenx_backup/utils/: __init__.py  preprocessing.py
aizenx_backup/visualization/: __init__.py  bias_plot.py  decision_boundary.py  local_plot.py
examples/: demo.py
